--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
 blinker==1.4
-click==6.7
-Flask==1.0.2
+Click==7.0
+Flask==1.1.1
+Flask-Login==0.4.1
+Flask-Restless==0.17.0
 Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.3.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
 psycopg2-binary==2.7.5
-SQLAlchemy==1.2.8
-Werkzeug==0.14.1
-
-#skyfield
-#fullcalendar
-#twilio
-#https://developers.google.com/identity/protocols/OAuth2WebServer?hl=en_US
+requests==2.22.0
+SQLAlchemy==1.3.10
+Werkzeug==0.16.0
